--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/Messages.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/Messages.properties
@@ -1,1 +1,1 @@
-QRebelBuilder.DescriptorImpl.DisplayName=Monitor performance with QRebel
+QRebelBuilder.DescriptorImpl.DisplayName=Monitor performance regression with QRebel
